修改或添加接口

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>edu_subject</module>
         <module>edu_eurekaRegister</module>
         <module>edu_course</module>
+        <module>edu_videoUpload</module>
     </modules>
 
     <parent>
