--- a/edu_course/edu_course_service/pom.xml
+++ b/edu_course/edu_course_service/pom.xml
@@ -42,11 +42,11 @@
         <!--<artifactId>spring-cloud-starter-openfeign</artifactId>-->
     <!--</dependency>-->
 
-    <dependency>
-        <groupId>org.springframework.cloud</groupId>
-        <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-        <version>2.2.1.RELEASE</version>
-    </dependency>
+    <!--<dependency>-->
+        <!--<groupId>org.springframework.cloud</groupId>-->
+        <!--<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>-->
+        <!--<version>2.2.1.RELEASE</version>-->
+    <!--</dependency>-->
 
     <dependency>
         <groupId>org.springframework.boot</groupId>
