--- a/edu_teacher/edu_teacher_service/pom.xml
+++ b/edu_teacher/edu_teacher_service/pom.xml
@@ -34,11 +34,11 @@
         <!--</dependency>-->
         <!--&lt;!&ndash;服务调用&ndash;&gt;-->
 
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-            <version>2.2.1.RELEASE</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.springframework.cloud</groupId>-->
+            <!--<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>-->
+            <!--<version>2.2.1.RELEASE</version>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
