--- a/edu_videoUpload/src/main/resources/application.yml
+++ b/edu_videoUpload/src/main/resources/application.yml
@@ -24,11 +24,11 @@ aliyun:
 #      max-file-size: 1024MB
 #      max-request-size: 1024MB
 
-eureka:
-  client:
-    service-url:
-      defaultZone: http://127.0.0.1:7001/eureka
-    registry-fetch-interval-seconds: 10
-  instance:
-    prefer-ip-address: true
-    ip-address: 127.0.0.1
+#eureka:
+#  client:
+#    service-url:
+#      defaultZone: http://127.0.0.1:7001/eureka
+#    registry-fetch-interval-seconds: 10
+#  instance:
+#    prefer-ip-address: true
+#    ip-address: 127.0.0.1
