--- a/edu_teacher/edu_teacher_service/pom.xml
+++ b/edu_teacher/edu_teacher_service/pom.xml
@@ -28,10 +28,10 @@
         <!--<artifactId>spring-cloud-starter-netflix-hystrix</artifactId>-->
         <!--</dependency>-->
         <!--&lt;!&ndash;服务注册&ndash;&gt;-->
-        <!--<dependency>-->
-        <!--<groupId>org.springframework.cloud</groupId>-->
-        <!--<artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>-->
-        <!--</dependency>-->
+        <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
         <!--&lt;!&ndash;服务调用&ndash;&gt;-->
 
         <!--<dependency>-->
