--- a/edu_videoUpload/src/main/resources/application.yml
+++ b/edu_videoUpload/src/main/resources/application.yml
@@ -7,6 +7,10 @@ spring:
     multipart:
       max-file-size: 1024MB
       max-request-size: 1024MB
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
 server:
   port: 8005
 
