--- a/edu_course/edu_course_service/pom.xml
+++ b/edu_course/edu_course_service/pom.xml
@@ -22,15 +22,15 @@
         <groupId>com.alibaba</groupId>
         <artifactId>fastjson</artifactId>
     </dependency>
-    <!--<dependency>-->
-    <!--<groupId>org.springframework.cloud</groupId>-->
-    <!--<artifactId>spring-cloud-starter-netflix-ribbon</artifactId>-->
-    <!--</dependency>-->
+    <dependency>
+    <groupId>org.springframework.cloud</groupId>
+    <artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
+    </dependency>
     <!--&lt;!&ndash;hystrix依赖，主要是用  @HystrixCommand &ndash;&gt;-->
-    <!--<dependency>-->
-    <!--<groupId>org.springframework.cloud</groupId>-->
-    <!--<artifactId>spring-cloud-starter-netflix-hystrix</artifactId>-->
-    <!--</dependency>-->
+    <dependency>
+    <groupId>org.springframework.cloud</groupId>
+    <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+    </dependency>
     <!--&lt;!&ndash;服务注册&ndash;&gt;-->
     <dependency>
     <groupId>org.springframework.cloud</groupId>
