--- a/edu_banner/pom.xml
+++ b/edu_banner/pom.xml
@@ -74,10 +74,10 @@
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
         <!-- velocity 模板引擎, Mybatis Plus 代码生成器需要 -->
-        <dependency>
-            <groupId>org.apache.velocity</groupId>
-            <artifactId>velocity-engine-core</artifactId>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.apache.velocity</groupId>-->
+            <!--<artifactId>velocity-engine-core</artifactId>-->
+        <!--</dependency>-->
         <!--swagger-->
         <dependency>
             <groupId>io.springfox</groupId>
