--- a/commom_utils/pom.xml
+++ b/commom_utils/pom.xml
@@ -13,6 +13,12 @@
     <artifactId>commom_utils</artifactId>
 
     <dependencies>
+        <!-- JWT-->
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.1</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
