--- a/edu_course/edu_course_interface/pom.xml
+++ b/edu_course/edu_course_interface/pom.xml
@@ -13,4 +13,10 @@
     <artifactId>edu_course_interface</artifactId>
 
 
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+    </dependencies>
 </project>
