--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>edu_banner</module>
         <module>edu_sendMsg</module>
         <module>edu_userCenter</module>
+        <module>edu_order</module>
     </modules>
 
     <parent>
