--- a/commom_utils/pom.xml
+++ b/commom_utils/pom.xml
@@ -13,6 +13,11 @@
     <artifactId>commom_utils</artifactId>
 
     <dependencies>
+        <dependency>
+        <groupId>com.github.wxpay</groupId>
+        <artifactId>wxpay-sdk</artifactId>
+        <version>0.0.3</version>
+        </dependency>
         <!-- JWT-->
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
